--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ body{
         flex-direction:column ;
         font-size: 0.5rem;
 }
-    #welcome-section{
+#welcome-section{
         font-size: 0.8rem;
         max-width: 100vw;
        text-align: center;
@@ -200,15 +200,17 @@ body{
         color: #1100ff; /* Gold */
     }
 }
+
 .projects-content{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 95vw;
+    width: 90%;
     height: 100%;
     gap: 1rem;
     margin: 2rem;
+    box-sizing: border-box;
 }
 #projects{
     display: flex;
@@ -258,6 +260,10 @@ body{
     -ms-transform: scale(1.4);
     -o-transform: scale(1.4);
     transition: transform 0.3s ease;
+    -webkit-transition: transform 0.3s ease;
+    -moz-transition: transform 0.3s ease;
+    -ms-transition: transform 0.3s ease;
+    -o-transition: transform 0.3s ease;
 }
 .contact-section{
     padding-top: 1rem;
@@ -290,6 +296,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    box-sizing: border-box;
 }
 @keyframes NavBarAppearance {
     0% {
@@ -298,4 +305,75 @@ body{
     100% {
         top: 0;
     }
+}
+.skill img, .skill i{
+    width: 25px;
+    border-radius: 50%;
+    margin: 1rem;
+    font-size: 2rem;
+}
+.skill{
+    display: flex;
+    align-items: center;
+    border: var(--dark-blue) 4px solid;
+    border-radius: 10px;
+    padding-right:1rem;
+    background-color: var(--light-blue);
+}
+.skill:hover{
+    background-color: var(--dark-blue);
+    transition: background-color 0.5s ease;
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transition: transform 0.3s ease;
+    -webkit-transition: transform 0.3s ease;
+    -moz-transition: transform 0.3s ease;
+    -ms-transition: transform 0.3s ease;
+    -o-transition: transform 0.3s ease;
+    color: var(--light-blue);
+    text-shadow: var(--light-blue) 1px 1px 1px;
+}
+.skills-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 2rem;
+    width: 90%;
+}
+.skills{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: var(--dark-blue);
+    background-color: var(--medium-blue);
+    width: 80%;
+    margin: 1rem auto;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgb(0, 0, 0);
+    border: var(--dark-blue) 4px solid;
+    margin-bottom: 3rem;
+}
+.skills h2{
+    background-color: var(--dark-blue);
+    color: var(--light-blue);
+    width: 100%;
+    text-align: center;
+    height: 50px;
+    margin: 0;
+    padding: 0.5rem;
+    box-sizing: border-box;
+}
+.skill span{
+    font-size: 1.2rem;
+    font-weight: bolder;
+    margin: 0.5rem;
+}
+#skill{
+    margin-top: 7rem;
 }
